--- a/README.org
+++ b/README.org
@@ -3,21 +3,21 @@
 El Gantt creates a Gantt calendar from your orgmode files. It provides a flexible customization system with the goal of being adaptable to multiple purposes. 
 ** Installation
  If you don't know how to install this:
-*** Install all dependencies
+Install all dependencies
 - org-ql
 - ts
 - s
 - dash
-*** Clone this repository into your =lisp= directory (if you are using Emacs 27, you made need to swap =~/.emacs.d= with =~/.config/emacs=):
+Clone this repository into your =lisp= directory (if you are using Emacs 27, you made need to swap =~/.emacs.d= with =~/.config/emacs=):
 #+begin_src shell :results silent 
 cd ~/.emacs.d/lisp
 git clone httpqs://github.com/legalnonsense/elgantt.git
 #+end_src
-*** Then make sure the folder is in your load path:
+Make sure the folder is in your load path:
 #+begin_src emacs-lisp :results silent
   (add-to-list 'load-path "~/.emacs.d/lisp/elgantt/")
 #+end_src
-*** Finally:
+Finally:
 #+begin_src emacs-lisp :results silent
 (require 'elgantt)
 #+end_src
